@@ -1,19 +1,19 @@
 <?php
 /**
-* Smarty Internal Plugin Compile Template
+* Smarty Internal Plugin Compile Function
 * 
-* Compiles the {template} tag
+* Compiles the {function} tag
 * 
 * @package Smarty
 * @subpackage Compiler
 * @author Uwe Tews 
 */
 /**
-* Smarty Internal Plugin Compile Template Class
+* Smarty Internal Plugin Compile Function Class
 */
-class Smarty_Internal_Compile_Template extends Smarty_Internal_CompileBase {
+class Smarty_Internal_Compile_Function extends Smarty_Internal_CompileBase {
     /**
-    * Compiles code for the {template} tag
+    * Compiles code for the {function} tag
     * 
     * @param array $args array with attributes from parser
     * @param object $compiler compiler object
@@ -27,10 +27,10 @@ class Smarty_Internal_Compile_Template extends Smarty_Internal_CompileBase {
         // check and get attributes
         $_attr = $this->_get_attributes($args);
         $save = array($_attr, $compiler->template->extracted_compiled_code, $compiler->template->extract_code);
-        $this->_open_tag('template', $save);
+        $this->_open_tag('function', $save);
         $_name = trim($_attr['name'], "'");
         foreach ($_attr as $_key => $_data) {
-            $compiler->template->properties['template'][$_name]['parameter'][$_key] = $_data;
+            $compiler->template->properties['function'][$_name]['parameter'][$_key] = $_data;
         } 
         $compiler->template->extract_code = true;
         $compiler->template->extracted_compiled_code = '';
